--- a/react/public/index.html
+++ b/react/public/index.html
@@ -25,15 +25,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    
     <link rel="icon" href="%PUBLIC_URL%/bootstrap/images/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/scss" href="%PUBLIC_URL%/bootstrap/scss/style.scss" />
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/bootstrap/css/style.css" />
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/bootstrap/css/docstyle.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+
 
   </head>
   <body>
@@ -50,9 +49,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   
-  
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="%PUBLIC_URL%/bootstrap/js/vendor-all.min.js"></script>
-	<script src="./bootstrap/js/plugins/bootstrap.min.js"></script>
+	<script src="./bootstrap/js/plugins/bootstrap.min.js"></script>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
 	<script src="%PUBLIC_URL%/bootstrap/js/pcoded.min.js"></script>
 
 
