--- a/react/public/index.html
+++ b/react/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     
     <link rel="icon" href="%PUBLIC_URL%/bootstrap/images/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -32,8 +34,11 @@
     <link rel="stylesheet" type="text/scss" href="%PUBLIC_URL%/bootstrap/scss/style.scss" />
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/bootstrap/css/style.css" />
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/bootstrap/css/docstyle.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+    rel="stylesheet"
+    href="https://unpkg.com/react-quill@1.3.3/dist/quill.snow.css"
+  />
+    
 
   </head>
   <body>
@@ -49,11 +54,14 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  
-  
+ 
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+ 
   <script src="%PUBLIC_URL%/bootstrap/js/vendor-all.min.js"></script>
-	<script src="./bootstrap/js/plugins/bootstrap.min.js"></script>
-	<script src="%PUBLIC_URL%/bootstrap/js/pcoded.min.js"></script>
+  <script src="./bootstrap/js/plugins/bootstrap.min.js"></script>
+  <script src="%PUBLIC_URL%/bootstrap/js/pcoded.min.js"></script>
+
+	
 
 
   </body>
