--- a/react/public/index.html
+++ b/react/public/index.html
@@ -32,8 +32,12 @@
     <link rel="stylesheet" type="text/scss" href="%PUBLIC_URL%/bootstrap/scss/style.scss" />
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/bootstrap/css/style.css" />
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/bootstrap/css/docstyle.css" />
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/bootstrap/css/calendar.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    
+
+    
 
   </head>
   <body>
@@ -54,6 +58,7 @@
   <script src="%PUBLIC_URL%/bootstrap/js/vendor-all.min.js"></script>
 	<script src="./bootstrap/js/plugins/bootstrap.min.js"></script>
 	<script src="%PUBLIC_URL%/bootstrap/js/pcoded.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@2.11.6/dist/umd/popper.min.js"></script>
 
 
   </body>
